# events-aws-kinesis

./: BUILD  LICENSE  MODULE.bazel  README.md  events-aws-kinesis_plugin_deps.lock.json  events-aws-kinesis_third_party_runtime_jars.allowlist.txt  external_plugin_deps.MODULE.bazel  external_plugin_deps.bzl  groups  project.config
src/main/java/com/gerritforge/gerrit/plugins/kinesis/: AWSLogLevelListener.java  CheckpointResetter.java  CloudWatchAsyncClientProvider.java  Configuration.java  ConsumerExecutor.java  ConsumerExecutorProvider.java  DynamoDbAsyncClientProvider.java  InitConfig.java  KinesisAsyncClientProvider.java  KinesisAutoAcknowledgement.java  KinesisBrokerApi.java  KinesisBrokerLifeCycleManager.java  KinesisConsumer.java  KinesisProducerProvider.java  KinesisPublisher.java  KinesisRecordAcknowledgement.java  KinesisRecordProcessor.java  KinesisRecordProcessorFactory.java  Module.java  ProducerCallbackExecutor.java  ProducerCallbackExecutorProvider.java  SchedulerProvider.java
src/main/resources/Documentation/: Build.md  Config.md
src/test/java/com/gerritforge/gerrit/plugins/kinesis/: ConfigurationTest.java  KinesisEventsIT.java  KinesisProducerProviderTest.java  KinesisRecordProcessorTest.java
