module(name = "gerrit-events-aws-kinesis")

bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "7.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

AWS_SDK_VER = "2.16.19"
AWS_KINESIS_VER = "2.3.4"
JACKSON_VER = "2.10.4"
TESTCONTAINERS_VERSION = "1.15.3"
DOCKER_JAVA_VERS = "3.2.8"

maven.install(
    name = "events-aws-kinesis_plugin_deps",
    artifacts = [
        "com.amazonaws:amazon-kinesis-producer:0.14.6",
        "com.amazonaws:aws-java-sdk-core:1.11.960",
        "com.fasterxml.jackson.core:jackson-annotations:" + JACKSON_VER,
        "com.fasterxml.jackson.core:jackson-core:" + JACKSON_VER,
        "com.fasterxml.jackson.core:jackson-databind:" + JACKSON_VER,
        "com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:" + JACKSON_VER,
        "com.github.docker-java:docker-java-api:" + DOCKER_JAVA_VERS,
        "com.github.docker-java:docker-java-transport:" + DOCKER_JAVA_VERS,
        "commons-io:commons-io:2.4",
        "commons-lang:commons-lang:2.6",
        "io.netty:netty-all:4.1.51.Final",
        "io.projectreactor:reactor-core:3.4.3",
        "io.reactivex.rxjava2:rxjava:2.1.14",
        "javax.xml.bind:jaxb-api:2.3.1",
        "net.java.dev.jna:jna:5.5.0",
        "org.apache.commons:commons-lang3:3.12.0",
        "org.reactivestreams:reactive-streams:1.0.2",
        "org.rnorth.duct-tape:duct-tape:1.0.8",
        "org.rnorth.visible-assertions:visible-assertions:2.1.2",
        "org.testcontainers:localstack:" + TESTCONTAINERS_VERSION,
        "org.testcontainers:testcontainers:" + TESTCONTAINERS_VERSION,
        "software.amazon.awssdk:auth:" + AWS_SDK_VER,
        "software.amazon.awssdk:aws-cbor-protocol:" + AWS_SDK_VER,
        "software.amazon.awssdk:aws-core:" + AWS_SDK_VER,
        "software.amazon.awssdk:aws-json-protocol:" + AWS_SDK_VER,
        "software.amazon.awssdk:aws-query-protocol:" + AWS_SDK_VER,
        "software.amazon.awssdk:cloudwatch:" + AWS_SDK_VER,
        "software.amazon.awssdk:dynamodb:" + AWS_SDK_VER,
        "software.amazon.awssdk:http-client-spi:" + AWS_SDK_VER,
        "software.amazon.awssdk:kinesis:" + AWS_SDK_VER,
        "software.amazon.awssdk:metrics-spi:" + AWS_SDK_VER,
        "software.amazon.awssdk:netty-nio-client:" + AWS_SDK_VER,
        "software.amazon.awssdk:profiles:" + AWS_SDK_VER,
        "software.amazon.awssdk:protocol-core:" + AWS_SDK_VER,
        "software.amazon.awssdk:regions:" + AWS_SDK_VER,
        "software.amazon.awssdk:sdk-core:" + AWS_SDK_VER,
        "software.amazon.awssdk:url-connection-client:" + AWS_SDK_VER,
        "software.amazon.awssdk:utils:" + AWS_SDK_VER,
        "software.amazon.glue:schema-registry-serde:1.0.0",
        "software.amazon.kinesis:amazon-kinesis-client:" + AWS_KINESIS_VER,
    ],
    duplicate_version_warning = "error",
    excluded_artifacts = [
        "com.google.code.findbugs:jsr305",
        "software.amazon.awssdk:apache-client",
        "com.google.errorprone:error_prone_annotations",
        "com.google.guava:failureaccess",
        "com.google.guava:guava",
        "com.google.j2objc:j2objc-annotations",
        "com.google.protobuf:protobuf-java",
        "commons-codec:commons-codec",
        "commons-io:commons-io",
        "junit:junit",
        "org.apache.commons:commons-compress",
        "org.apache.commons:commons-lang3",
        "org.apache.httpcomponents:httpclient",
        "org.apache.httpcomponents:httpcore",
        "org.slf4j:slf4j-api",
    ],
    fail_if_repin_required = True,
    fail_on_missing_checksum = True,
    fetch_sources = True,
    lock_file = "//:events-aws-kinesis_plugin_deps.lock.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    version_conflict_policy = "pinned",
)
use_repo(maven, "events-aws-kinesis_plugin_deps")